--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "exports-loader": "^2.0.0",
+    "raw-loader": "^4.0.2",
+    "script-loader": "^0.7.2",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
